fix layout hidden on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 .skill,
 .project,
 .contact {
+  padding-bottom: 50px;
   overflow: hidden;
 }
 .section__title {
